testsuite/tests/parser/should_fail/readFail042.stderr

readFail042.hs:9:9: [GHC-42026] error:
    Unexpected transform statement in a list comprehension
    Suggested fix: Perhaps you intended to use TransformListComp

readFail042.hs:9:9: [GHC-42026] error:
    Unexpected transform statement in a list comprehension
    Suggested fix: Perhaps you intended to use TransformListComp
